# vertex-theme

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  gulpfile.js
common/: Makefile.am
m4/: vertex-enable.m4  vertex-gnome.m4
